--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
     
   
   
+    <h2><a href="/posts/brain-image-factorization/">image factorization in the brain</a></h2>
+  
     <h2><a href="/posts/gate-decomp/">quantum gate decomposition</a></h2>
   
     <h2><a href="/posts/clash-royale/">clash royale</a></h2>
