--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@
     
     <section id="about-home">
       
-      <p>Gigabug is the website of Matt Bowring. I built this as an expressive outlet to write, earn web development, and share with the world. I work as a software engineer, and spend time reading and staying active. My interests are guided by physics, engineering, economics, and psychology. My work experience is available on my <a href="/about/matt-bowring-resume.pdf">resume</a>.</p>
-<p>This site will undergo changes. I&rsquo;ve done sketching to organize content but not quite happy yet. This uses the default Hugo theme with minor modifications but I like it&rsquo;s simplicity.</p>
+      <p>Gigabug is the website of Matt Bowring. I built it as an expressive outlet to write, learn web development, and share with the world. I work as a software engineer, and spend time reading and staying active. My interests are guided by physics, engineering, economics, and psychology. Work experience is available on my <a href="/about/matt-bowring-resume.pdf">resume</a>.</p>
+<p>This site will undergo changes. I&rsquo;ve done sketching to organize content, but I&rsquo;m sticking with the default theme template for now.</p>
 
     </section>
   
